--- a/.valgrindrc
+++ b/.valgrindrc
@@ -1,1 +1,5 @@
---leak-check=full --show-leak-kinds=all --track-fds=yes --track-origins=yes --suppressions=mlx42.supp
+--leak-check=full
+--show-leak-kinds=all
+--track-fds=yes
+--track-origins=yes
+--suppressions=mlx42.supp
